--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: /
 # Site settings
 title: EWHA-CHAIN
 email: ewha.chain@gmail.com
-description: "Ewha Womans University Blockchain Society"
+description: "Ewha Womans University Blockchain Academic Club"
 
 
 # Team names, titles and social links
